components/ChartPage/More.module.scss
.More {
  font-family: "M PLUS 1", "Arial", sans-serif;
  font-size: 0.875rem;
  line-height: 1.25;

  h6 {
    font-weight: bold;
  }

  * + h6 {
    margin-top: 1rem;
  }

  p {
    font-size: 0.875rem;
  }

  input[type=text] {
    font-family: Courier, monospace;
    font-size: 1rem;
  }

  button {
    line-height: 1;
    display: inline-flex;
    flex-direction: row;
    align-items: center;
    border: none;
    border-radius: 0.25rem;
    height: 1.5rem;

    @media (hover: hover) {
      &:hover:enabled:not(:active) {
        transform: translate(-2px, -2px);
      }
    }

    &.icon {
      width: 1.5rem;
      font-size: 1.5rem;
      padding: 0;
    }
  }

  .transformOptions {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
    margin-top: 0.5rem;
    margin-right: -0.5rem;

    .nonran, .mirror, .random, .rran {
      width: calc(50% - 0.25rem);
      display: flex;

      label {
        margin-left: 0.25rem;
        line-height: 1;
      }

      .subControl {
        display: flex;
        align-items: center;
        margin-left: 1rem;
      }
    }

    .random, .rran {
      flex-direction: column;
      gap: 0.25rem;
    }

    .rran .subControl .description {
      display: flex;
      flex-direction: column;
      margin: 0 0.5rem;
      font-size: 0.75rem;
      text-align: center;
    }
  }

  .transformPreview {
    margin-top: 0.625rem;
    position: relative;

    .Measure {
      // Crop out everything but the note area LOL
      clip-path: rect(-8px 296px 98px 96px);
      position: relative;
      top: 4px;
      left: -54px;
    }
  }

  .randomInput.invalid {
    background-color: #eba;
  }


    .rightLeft {
      display: flex;
      flex-direction: row;
      align-items: center;
      gap: 0.25rem;

      button {
        line-height: 1;
        width: 1.5rem;
        height: 1.5rem;
        font-size: 1.5rem;
        padding: 0;
        display: flex;
        flex-direction: row;
        align-items: center;
      }

      .description {
        display: inline-flex;
        flex-direction: column;
        align-items: center;
        font-size: 0.875rem;
      }
    }

  .github {
    margin: -0.5rem -0.5rem -0.5rem 0;
    display: flex;
    justify-content: right;
    align-items: flex-end;
    gap: 0.25rem;

    .sha {
      color: #888;
      font-size: 0.5625rem;
      line-height: 1;
    }

    a {
      // https://stackoverflow.com/a/48690899
      // box-shadow: inset 0 -1px 0 0 #222;
      // text-decoration: none;
      font-size: 1.25rem;
    }
  }
}

